--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,17 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_secure_storage: ^9.0.0
   flutter_bloc: ^8.1.3
+  flutter_localizations:
+    sdk: flutter
+  flutter_secure_storage: ^9.0.0
+  flutter_zoom_drawer: ^3.2.0
+  gap: ^3.0.1
   get_it: ^7.6.7
   http: ^1.1.0
   internet_connection_checker: ^1.0.0+1
-  flutter_localizations: # Add this line
-    sdk: flutter # Add this line
   intl: ^0.18.1
+  scroll_page_view: ^1.0.2
   shared_preferences: ^2.2.2
 
 dev_dependencies:
@@ -29,4 +32,19 @@ dev_dependencies:
 flutter:
   generate: true # Add this line
   uses-material-design: true
-
+  assets:
+    - assets/icon/
+    - assets/image/
+    - assets/json/
+  fonts:
+    - family: Sen
+      fonts:
+        - asset: assets/font/Sen-Bold.ttf
+          weight: 700
+        - asset: assets\font\Sen-ExtraBold.ttf
+          weight: 900
+        - asset: assets\font\Sen-Medium.ttf
+          weight: 500
+        - asset: assets\font\Sen-Regular.ttf
+          weight: 400
+        - asset: assets\font\Sen-SemiBold.ttf
